fifth commit - new courses in best section and contact form submission ,,etc.

--- a/public/index.html
+++ b/public/index.html
@@ -175,6 +175,18 @@
       color: white;
       opacity: 1;
     }
+
+    .site-mobile-menu-body a {
+      color: black;
+      /* Set link color to black */
+      text-decoration: none;
+      /* Optional: Remove underline */
+    }
+
+    .site-mobile-menu-body a:hover {
+      color: gray;
+      /* Optional: Add hover effect */
+    }
   </style>
 
   <title>Shyam Technologies</title>
