--- a/public/index.html
+++ b/public/index.html
@@ -2,211 +2,99 @@
 <html lang="en">
 
 <head>
+  <title>Shyam Technologies</title>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/White Logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Shyam Technologies - Providing innovative Data Science with AI & ML, Python Programming, Data Analytics, Java Full Stack, .NET Full Stack, PEGA, AWS DevOps, and SAP FICO with S4 HANA solutions." />
+  <meta name="keywords"
+    content="Data Science Training in Ameerpet, AI/ML Training in Ameerpet, Data Analytics training in Ameerpet, Python Training in Ameerpet, SAP training in ameerpet, Java Full Stack Training in Ameerpet, .NET Full Stack Training in Ameerpet, PEGA Training in Ameerpet, AWS DevOps Training in Ameerpet, Shyam Technologies, software development, cloud computing, machine learning, AI solutions" />
+  <meta name="author" content="Shyam Technologies" />
 
+  <!-- Favicon -->
+  <link rel="icon" href="%PUBLIC_URL%/WhiteLogo.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
+  <!-- Preconnect to Improve Loading Speed -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin="anonymous">
+  <link rel="preconnect" href="https://unicons.iconscout.com" crossorigin="anonymous">
+
+  <!-- Preload Fonts to Prevent Flash of Invisible Text -->
+  <!-- <link rel="preload" href="../public/fonts/flaticon/font/Flaticon.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous"> -->
+
+  <!-- Optimized Google Fonts -->
   <link
-    href="https://fonts.googleapis.com/css2?family=Display+Playfair:wght@400;700&family=Inter:wght@400;700&display=swap"
-    rel="stylesheet">
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@400;700&display=swap"
+    rel="stylesheet" media="print" onload="this.media='all'">
 
-
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/animate.min.css">
-  <!-- <link rel="stylesheet" href="./css/owl.carousel.min.css"> -->
-  <!-- <link rel="stylesheet" href="./css/owl.theme.default.min.css"> -->
-  <link rel="stylesheet" href="./css/jquery.fancybox.min.css">
-  <link rel="stylesheet" href="./fonts/icomoon/style.css">
-  <link rel="stylesheet" href="./fonts/flaticon/font/flaticon.css">
-  <link rel="stylesheet" href="./css/aos.css">
-
-  <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"> -->
+  <!-- Lazy Load External Stylesheets -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" media="print"
+    onload="this.media='all'">
+  <link rel="stylesheet" href="./css/bootstrap.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="./css/animate.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="./css/jquery.fancybox.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="./css/aos.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="./css/style.css">
-  <!-- Owl Carousel CSS -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"> -->
-  <!-- <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
 
+  <!-- Defer & Async JavaScript -->
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script defer src="./js/popper.min.js"></script>
+  <script defer src="./js/bootstrap.min.js"></script>
+  <script defer src="./js/jquery.animateNumber.min.js"></script>
+  <script defer src="./js/jquery.waypoints.min.js"></script>
+  <script defer src="./js/jquery.fancybox.min.js"></script>
+  <script defer src="./js/jquery.sticky.js"></script>
+  <script defer src="./js/aos.js"></script>
+  <script defer src="./js/custom.js"></script>
 
-  <script src="./js/jquery-3.4.1.min.js"></script>
-  <script src="./js/popper.min.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
-  <!-- <script src="./js/owl.carousel.min.js"></script> -->
-  <script src="./js/jquery.animateNumber.min.js"></script>
-  <script src="./js/jquery.waypoints.min.js"></script>
-  <script src="./js/jquery.fancybox.min.js"></script>
-  <script src="./js/jquery.sticky.js"></script>
-  <script src="./js/aos.js"></script>
-  <!-- <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+  <!-- Optimize AOS Initialization -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      AOS.init();
+      AOS.init({ once: true, delay: 100 });
     });
   </script>
-  <script defer src="./js/custom.js"></script>
-  <!-- <script>
-    const stickyNav = document.querySelector(".sticky-nav");
-    const enrollButton = document.querySelector(".btn-book");
 
-    function updateEnrollButtonMargin() {
-      if (stickyNav.classList.contains("js-sticky-header")) {
-        enrollButton.style.marginTop = "10px";
-        enrollButton.style.marginRight = "0px";
-      } else {
-        enrollButton.style.marginTop = "0";
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Shyam Technologies - Leading IT & Software Development Solutions" />
+  <meta property="og:description"
+    content="Expert IT solutions including Data Science with AI & ML, Python Programming, Java Full Stack, AWS DevOps, and SAP FICO with S4 HANA. Contact us today!" />
+  <meta property="og:image" content="%PUBLIC_URL%/White Logo.png" />
+  <meta property="og:url" content="https://www.shyamtechnologies.in/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Shyam Technologies - IT & Software Experts" />
+  <meta name="twitter:description"
+    content="Leading provider of Data Science, AI & ML, Python Programming, Java Full Stack, .NET Full Stack, and more. Innovating IT solutions for businesses." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/White Logo.png" />
+
+  <link rel="canonical" href="https://www.shyamtechnologies.in" />
+
+  <!-- Structured Data (Schema.org) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Shyam Technologies",
+      "url": "https://www.shyamtechnologies.in",
+      "logo": "https://www.shyamtechnologies.in/WhiteLogo.png",
+      "description": "Innovative web development and IT solutions provider.",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91 9346593339",
+        "contactType": "customer service"
       }
     }
-
-    updateEnrollButtonMargin();
-
-    const observer = new MutationObserver(() => {
-      updateEnrollButtonMargin();
-    });
-
-    // Observe the class attribute of the stickyNav element
-    observer.observe(stickyNav, { attributes: true, attributeFilter: ["class"] });
-  </script> -->
-  <!-- <script>
-    $(document).ready(function () {
-      $(".owl-carousel").owlCarousel({
-        items: 1, // Display one item at a time
-        loop: true, // Enable infinite loop
-        nav: true, // Show navigation
-        navText: [
-          "<span class='arrow-prev'>&#10094;</span>", // Custom left arrow (HTML entity)
-          "<span class='arrow-next'>&#10095;</span>", // Custom right arrow (HTML entity)
-        ],
-        dots: false, // Disable dots (optional)
-        autoplay: true,
-        autoplayTimeout: 5000,
-        autoplayHoverPause: true,
-      });
-    });
-
-  </script> -->
-  <!-- <style>
-    .btn-book {
-      transition: margin-top 3s ease;
-      /* Smooth animation */
-    }
-
-    .owl-nav button {
-      position: absolute;
-      top: 10%;
-      transform: translateY(-50%);
-      background: rgba(255, 255, 255, 0.5);
-      border: none;
-      padding: 15px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-
-    .owl-nav .owl-prev {
-      left: 10px;
-    }
-
-    .owl-nav .owl-next {
-      right: 10px;
-    }
-  </style> -->
-  <!-- <style>
-    /* Hide default button backgrounds */
-
-    /* Arrow container */
-    .owl-nav {
-      position: absolute;
-      top: 50%;
-      width: 100%;
-      transform: translateY(-50%);
-      display: flex;
-      justify-content: space-between;
-    }
-  </style> -->
-  <style>
-    /* Tooltip container */
-    .tooltip-container {
-      position: relative;
-      display: inline-block;
-      cursor: pointer;
-    }
-
-    /* Tooltip text */
-    .tooltip-container .tooltip-text {
-      visibility: hidden;
-      width: 200px;
-      /* Adjust as needed */
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      border-radius: 5px;
-      padding: 8px;
-      position: absolute;
-      z-index: 1;
-      bottom: 120%;
-      /* Position above the element */
-      left: 50%;
-      transform: translateX(-50%);
-      /* opacity: 0; */
-      transition: opacity 0.3s ease;
-    }
-
-    /* Tooltip arrow */
-    .tooltip-container .tooltip-text::after {
-      content: '';
-      position: absolute;
-      top: 100%;
-      /* Arrow at the bottom of the tooltip */
-      left: 50%;
-      margin-left: -5px;
-      border-width: 5px;
-      border-style: solid;
-      border-color: #333 transparent transparent transparent;
-    }
-
-    /* Show tooltip on hover */
-    .tooltip-container:hover .tooltip-text {
-      visibility: visible;
-      color: white;
-      opacity: 1;
-    }
-
-    .site-mobile-menu-body a {
-      color: black;
-      /* Set link color to black */
-      text-decoration: none;
-      /* Optional: Remove underline */
-    }
-
-    .site-mobile-menu-body a:hover {
-      color: gray;
-      /* Optional: Add hover effect */
-    }
-  </style>
-
-  <title>Shyam Technologies</title>
+  </script>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
 </body>
 
 </html>
